[package]
name = "das-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discv5 = "*"
tokio = { version = "1.15.0", features = ["full"] }
enr = { version = "0.6.2", features = ["k256", "ed25519"] }
libp2p-core = { version = "0.36.0", optional = true }
hex = "0.4.3"
parking_lot = "0.11.2"
tokio-util = { version = "0.6.9", features = ["time"] }
clap = { version = "4.0.0-rc.2" }
tracing = { version = "0.1.29", features = ["log"] }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
futures = "0.3.24"
tokio-stream = "0.1.10"