[package]
name = "das-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
anyhow = "1.0.66"
discv5 = "0.1"
tokio = { version = "1.15.0", features = ["full"] }
enr = { version = "0.6.2", features = ["k256", "ed25519"] }
libp2p-core = { version = "0.36.0", optional = true }
hex = "0.4.3"
parking_lot = "0.11.2"
tokio-util = { version = "0.6.9", features = ["time"] }
tracing = { version = "0.1.29" }
futures = "0.3.24"
tokio-stream = "0.1.10"
eth2_ssz = "0.4.0"
eth2_ssz_derive = "0.3.0"
eth2_ssz_types = "0.2.1"
async-recursion = "1.0.0"
warp = "0.3"
strum = {version = "0.24", features = ["derive"] }
itertools = "0.10"
dyn-clone = "1.0"
rand = "0.8"
sha3 = "0.10"
nanoid = "0.4.0"

chrono = "0.4.22"
byteorder = "1.4.3"

# discv5-overlay = {git = "https://github.com/timoth-y/discv5-overlay" }
discv5-overlay = {path = "../trin"}
lazy_static = "1.4.0"

libp2p = { version = "0.40.0" }
unsigned-varint = "0.7.1"
async-trait = "0.1.58"

reqwest = "0.11.12"
clap = { version = "4.0.18", features = ["derive"] }
cli-batteries = "0.4"

[build-dependencies]
cli-batteries = "0.4"

[patch.crates-io]
# discv5 = {git = "https://github.com/timoth-y/discv5"}
discv5 = {path = "../discv5"}
discv5-overlay = {path = "../trin"}
